# coding-assistance-infra

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.amd.yml  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.embeddings-gguf.yml  docker-compose.nvidia.yml  docker-compose.rag.yml  docker-compose.yml
.codex/: local-ai-coding-facility-codex-brief.md  project-context.md
.devcontainer/: devcontainer.json
config/clients/: opencode.example.json
config/llama-cpp/: embedding-models.example.yaml  models.example.yaml  models.ini  server.env.example
config/ollama/: models.example.yaml
config/opencode/: provider-snippet.example.jsonc
config/rag/: collections.example.yaml
docs/: TODO.md  architecture.md  embedding-models.md  gpu-profiles.md  model-profiles.md  opencode-integration.md  troubleshooting.md  windows-hosts.md
images/dev/: Dockerfile
images/diagnostics/: Dockerfile  smoke-test.sh
images/llama-cpp/: Dockerfile  embedding-entrypoint.sh  entrypoint.sh
images/model-init/: Dockerfile  init-models.sh
images/rag-mcp/: Dockerfile  pyproject.toml
images/rag-mcp/src/rag_mcp/: __init__.py  collection_identity.py  policy.py  server.py
images/rag-mcp/tests/: test_collection_identity.py  test_policy.py
scripts/: common.sh  inspect-gpu.sh  print-endpoints.sh  pull-models.sh  smoke-test.sh  up.sh
scripts/linux/: common.sh  down.sh  print-endpoints.sh  pull-models.sh  smoke-test.sh  up.sh
scripts/windows/: common.ps1  down.ps1  inspect-gpu.ps1  print-endpoints.ps1  pull-models.ps1  smoke-test.ps1  up.ps1
