[project]
name = "local-ai-rag-mcp"
version = "0.1.0"
description = "Narrow project-document retrieval MCP server"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<1",
  "mcp>=1.27,<2",
  "qdrant-client>=1.14,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]
